# project-graph-server

./: .pre-commit-config.yaml  README.md  package.py  pyproject.toml
.github/workflows/: package.yml
src/project_graph_server/: __main__.py  client.py
